k8s/base-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: base-deployment
  namespace: picket
spec:
  selector:
    matchLabels:
      type: front
      ver: v1
  replicas: 2
  strategy:
    type: RollingUpdate
  minReadySeconds: 10
  template:
    metadata:
      labels:
        type: front
        ver: v1
    spec:
      containers:
        - name: front-v1
          image: kangseol/spring_basic:latest
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 10
            successThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 10
      terminationGracePeriodSeconds: 10
