k8s/new-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: picket-front-deployment-v${BUILD_NUMBER}
  labels:
    app: picket-front
    version: v${BUILD_NUMBER}
    ver: new
spec:
  replicas: 1
  selector:
    matchLabels:
      app: picket-front
      version: v${BUILD_NUMBER}
      ver: new
  template:
    metadata:
      name: picket
      labels:
        app: picket-front
        version: v${BUILD_NUMBER}
        ver: new
    spec:
      containers:
        - name: front
          image: sagnwoo/picket-front:v${BUILD_NUMBER}
          volumeMounts:
            - name: nginx-config-volume
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: nginx-config-volume
          configMap:
            name: nginx-config
