k8s/base-service.yml
apiVersion: v1
kind: Service
metadata:
  name: base-service
spec:
  selector:
    type: front
    ver: v1
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
