k8s/new-service.yml
apiVersion: v1
kind: Service
metadata:
  name: new-service
spec:
  selector:
    type: front
    ver: v2
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
