k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: new-picket-front-service
spec:
  selector:
    app: picket-front
    ver: new
  ports:
    - port: 8080
      targetPort: 8080
  type: LoadBalancer
